--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "webpack-learning",
+  "name": "react-routing",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack"
+    "build": "NODE_ENV=production webpack -p",
+    "start": "webpack-dev-server --inline --content-base ./build --history-api-fallback"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -20,5 +22,10 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-router": "^3.0.0"
   }
 }
