--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "NODE_ENV=production webpack -p",
+    "build": "webpack -p --config webpack.config.prod.js",
     "start": "webpack-dev-server --inline --content-base ./build --history-api-fallback"
   },
   "devDependencies": {
@@ -16,10 +16,13 @@
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.24.1",
     "node-sass": "^3.13.0",
     "purifycss-webpack-plugin": "^2.0.3",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
